* Add options for image sizes
* Resolve issue at http://www.xssed.com/mirror/55648/
* Resolve issues at http://secunia.com/advisories/31234/
* Add autorotate for new and existing photos
* Added search like on php.net: http://example.com/cameralife/SEARCHTERM
* Fix install issue, thanks Eoin McLoughlin
* Update install documentation
* Bugfixes
* Rethemed Admin section, thanks Keith Bishop

2.6.2  Will Entriken <cameralife AT phor.net>
* Website update, thanks to Rajesh Sundaram
* Security updates, thanks to Omer Singer and BackDoor
* Merge themes
* Fix some XSS and injection exploits
* New iconsets and themes
* Amazon S3 Support
* Flickr support
* iPhone support
* Add support for remote file storage over FTP, SSH, ...
* Fixed gallery API (iPhoto support)
* Separated filesystem calls and preferences into modules
* Check for update from the admin interface
* Moved all theme to its own separate API
* Automatically updates when the photos directory is changed 
* Renames and flags can be undone immediately (a la gmail)
* PNG support
* Uses mod_rewrite if possible, setup checks for mod_rewrite

2.6.0  Will Entriken <cameralife AT phor.net>
* Support for Gallery Remote API (upload from iPhoto, DigiKam, ...)
* Microformats, Sitemaps, OpenSearch
* RSS feeds, supports iPhoto photocasting
* Photo keywords with delicious-like keyword editor!
* Checkpoints allow you to review and approve changes to the site
* Comments and ratings
* Order prints online
* Allow multiple photos with same file name!
* Photos may be in a directory not accessible from the web
* More fun stats
* Huge changes under the hood (V4 -> V8 engine)
* Code is now in SVN
* Photo thumbnails are not generated until needed
* Security fixes to avoid DOS

2.5.5  Will Entriken <cameralife AT phor.net>
* Cleaned up administrative tasks
* Ask constructive users to create an account (photo.php)

2.5.4  Will Entriken <cameralife AT phor.net>
* Safer printing of photo descriptions
* Better documentation of basic functions