@@ -1,26 +1,24 @@
 <?php
 /**Theme Light
-*Design by Reality Software
-*
-*Based on http://www.freelayouts.com/templates/Reddy
-*<ul>
-*<li>theme version 1.0.0</li>
-*<li>theme date 7/20/2008</li>
-*</ul>
-*@link http://fdcl.sourceforge.net
-	  *@version 2.6.2
-	  *@author Will Entriken <cameralife@phor.net>
-	  *@copyright Copyright (c) 2001-2009 Will Entriken
-      *@access public
-*/
-/**
-*/
- $theme_name    = 'Light';
- $theme_author  = 'Will Entriken';
- $theme_email   = 'cameralife@phor.net';
- $theme_version = '1.0.0';
- $theme_date    = '7/20/2008';
- $theme_url     = 'http://fdcl.sourceforge.net';
+ *Design by Reality Software
+ *
+ *Based on http://www.freelayouts.com/templates/Reddy
+ *<ul>
+ *<li>theme version 1.0.0</li>
+ *<li>theme date 7/20/2008</li>
+ *</ul>
+ *@link http://fdcl.sourceforge.net
+ *@version 2.6.2
+ *@author Will Entriken <cameralife@phor.net>
+ *@copyright Copyright (c) 2001-2009 Will Entriken
+ *@access public
+ */
+$theme_name    = 'Light';
+$theme_author  = 'Will Entriken';
+$theme_email   = 'cameralife@phor.net';
+$theme_version = '1.0.1';
+$theme_date    = '7/20/2008';
+$theme_url     = 'http://fdcl.sourceforge.net';
 
- $theme_desc    = 'Design by Reality Software. Based on http://www.freelayouts.com/templates/Reddy';
+$theme_desc    = 'Design by Reality Software. Based on http://www.freelayouts.com/templates/Reddy';
 ?>
