@@ -10,6 +10,7 @@
 * Update install documentation
 * Bugfixes
 * Rethemed Admin section, thanks Keith Bishop
+* Supports GPS in photo metadata, links to Google maps
 
 2.6.2  Will Entriken <cameralife AT phor.net>
 * Website update, thanks to Rajesh Sundaram
